css/main.css
article {
    font-size: 1.5rem;
}

pre, code {
    overflow-x: auto;
    white-space: pre-wrap;
}

header h1 {
    margin-bottom: 0;
    line-height: 3em;
}

header {
    text-align: center;
}

p { margin: 1em 0; }

a         { color: #00a; }
a:hover   { color: #000; }
a:visited { color: #a0a; }


articles span {
    color: #555;
    font-family: Monaco, "Courier New", monospace;
    font-size: 80%;
}

@media (min-width: 1070px) {
    .title a {
        font-size: 400%;
    }
}

header a {
    font-weight: bold;
    text-decoration: none;
}

header a.extra {
    padding: 15px 5px;
    color: #555;
    margin-left: 1em;
}

header a.extra:hover {
    color: #444;
}

header {
    margin-bottom: 20px;
}

.meta {
    color: #555;
}

.meta a {
    color: #55a;
}

article a {
    text-decoration: none;
}

article pre {
    border: 1px solid #ddd;
    padding: 0 .4em;
}

article ul, article ol {
    margin-left: 0.25em;
}

article code {
    border: 1px solid #ddd;
    padding: 0 .2em;
}

article pre code {
    border: none;
}

/* terminal */
article pre {
    border: 1px solid #000;
    overflow-x: auto;
}


.linkButton {
    border: 1px solid blue;
    border-radius: 5px;
    padding: 5px;
}

.youtube-embed {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
}

.youtube-embed iframe, .youtube-embed object, .youtube-embed embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
table, th, td {
    border: solid black 1px;
    border-collapse: collapse;
    padding: 5px;
}

article img {
    max-width: 100%;
}

.contact > a {
    margin: 10px;
}

